reorganization jsonwebtoken package